ui-kit/flutter/v4/ai-features.mdx
---
title: "AI"
description: "AI — CometChat documentation."
---

## Overview

CometChat's AI capabilities greatly enhance user interaction and engagement in your application. Let's understand how the Flutter UI Kit achieves these features.

<Tabs>
<Tab title="Android">
![Image](/images/42164586-ai_overview_cometchat_screens-279c8d97a2ceef223f6566a98f3b52db.png)

</Tab>

<Tab title="iOS">
![Image](/images/c99b2df1-ai_overview_cometchat_screens-10747a250582e9ad21200abb79999d1c.png)

</Tab>

</Tabs>

***

## Usage

### Integration

To enable AI support in the CometChat UI Kit, you need to configure the UIKitSettings by passing a list of AI extensions.

<Tabs>
<Tab title="Dart">
```dart
UIKitSettings uiKitSettings = (UIKitSettingsBuilder()
  ..aiFeature =  [
    AISmartRepliesExtension(), // Smart Replies
    AIConversationStarterExtension(), // Conversation Starter
    AIAssistBotExtension(), // Assist Bot
    AIConversationSummaryExtension() // Conversation Summary
  ] // AI Features
).build();
```

</Tab>

</Tabs>

***

## Conversation Starters

When a user initiates a new chat, the UI kit displays a list of suggested opening lines that users can select, making it easier for them to start a conversation. These suggestions are powered by CometChat's AI, which predicts contextually relevant conversation starters.

For a comprehensive understanding and guide on implementing and using the Conversation Starters, refer to our specific guide on the [Conversation Starter](/fundamentals/ai-user-copilot/conversation-starter).

Once you have successfully activated the [Conversation Starter](/fundamentals/ai-user-copilot/conversation-starter) from your CometChat Dashboard, the feature will automatically be incorporated into the [MessageList](/ui-kit/flutter/v4/message-list) Widget of UI Kits.

<Tabs>
<Tab title="Android">
![Image](/images/c6959e7f-ai_conversation_starter_cometchat_screens-09c7ad8a46e0fee62899374f17ace862.png)

</Tab>

<Tab title="iOS">
![Image](/images/6eeccb13-ai_conversation_starter_cometchat_screens-a1864f5dd41e88928cccceb02125937c.png)

</Tab>

</Tabs>

## Smart Replies

Smart Replies are AI-generated responses to messages. They can predict what a user might want to say next by analyzing the context of the conversation. This allows for quicker and more convenient responses, especially on mobile devices.

For a comprehensive understanding and guide on implementing and using the Smart Replies, refer to our specific guide on the [Smart Replies](/fundamentals/ai-user-copilot/smart-replies).

Once you have successfully activated the [Smart Replies](/fundamentals/ai-user-copilot/smart-replies) from your CometChat Dashboard, the feature will automatically be incorporated into the Action sheet of [MessageComposer](/ui-kit/flutter/v4/message-composer) Widget of UI Kits.

<Tabs>
<Tab title="Android">
![Image](/images/6ef17433-ai_smart_reply_cometchat_screens-e77dd53b027b8aea31c6051021bb48ac.png)

</Tab>

<Tab title="iOS">
![Image](/images/206d38d6-ai_smart_reply_cometchat_screens-05a1d0f06b13e32652c8d5316e17a93c.png)

</Tab>

</Tabs>

## Conversation Summary

The Conversation Summary feature provides concise summaries of long conversations, allowing users to catch up quickly on missed chats. This feature uses natural language processing to determine the main points in a conversation.

For a comprehensive understanding and guide on implementing and using the Conversation Summary, refer to our specific guide on the [Conversation Summary](/fundamentals/ai-user-copilot/conversation-summary).

Once you have successfully activated the [Smart Replies](/fundamentals/ai-user-copilot/smart-replies) from your CometChat Dashboard, the feature will automatically be incorporated into the Action sheet of [MessageComposer](/ui-kit/flutter/v4/message-composer) Widget of UI Kits.

<Tabs>
<Tab title="Android">
![Image](/images/1bed3eb9-ai_conversation_summary_cometchat_screens-30ebadb95fd64d5d1e97a325831faf32.png)

</Tab>

<Tab title="iOS">
![Image](/images/6f814e23-ai_conversation_summary_cometchat_screens-3773a1451d89b87e5d3fcd799a17c46f.png)

</Tab>

</Tabs>

## AI Assist Bot

AI Assist Bots automate responses and prompt interaction in the chat. They can handle common queries, assist with tasks, and provide information, freeing up human resources for more complex issues.

For a comprehensive understanding and guide on implementing and using the AI Assist Bot, refer to our specific guide on the [AI Assist Bot](https://assets.cometchat.io/legacy-docs/ai-chatbots/ai-bots/bots.html).

Once you have successfully activated the [AI Assist Bot](https://assets.cometchat.io/legacy-docs/ai-chatbots/ai-bots/bots.html) from your CometChat Dashboard, the feature will automatically be incorporated into the Action sheet of [MessageComposer](/ui-kit/flutter/v4/message-composer) Widget of UI Kits.

<Tabs>
<Tab title="Android">
![Image](/images/23a46a33-ai_assist_bot_cometchat_screens-d423ff85ae6399285e00301591bb6429.png)

</Tab>

<Tab title="iOS">
![Image](/images/750ee982-ai_assist_bot_cometchat_screens-c0c1065ba170bb2720e242645cb9e9e0.png)

</Tab>

</Tabs>
