ui-kit/flutter/v5/ai-features.mdx
---
title: "AI Features"
sidebarTitle: "Smart Chat"
description: "Enhance user interaction with AI-powered conversation starters, smart replies, and conversation summaries in your Flutter app"
---

<Accordion title="AI Agent Component Spec">

| Field | Value |
| --- | --- |
| Package | `cometchat_chat_uikit` |
| Required setup | `CometChatUIKit.init(uiKitSettings: UIKitSettings)` then `CometChatUIKit.login(uid)` + AI features enabled in [CometChat Dashboard](/fundamentals/ai-user-copilot/overview) |
| AI features | Conversation Starter, Smart Replies, Conversation Summary, AI Assist Bot |
| Key components | `CometChatMessageList` → [Message List](/ui-kit/flutter/v5/message-list) (Conversation Starter), `CometChatMessageComposer` → [Message Composer](/ui-kit/flutter/v5/message-composer) (Smart Replies, Summary) |
| AI Extensions | `AISmartRepliesExtension()`, `AIConversationStarterExtension()`, `AIAssistBotExtension()`, `AIConversationSummaryExtension()` |
| Activation | Enable each AI feature from the CometChat Dashboard — UI Kit auto-integrates them after configuration |

</Accordion>

CometChat's AI capabilities greatly enhance user interaction and engagement in your application. Let's understand how the Flutter UI Kit achieves these features.

<Frame>
  <img src="/images/5b57feb3-ai_overview-e181192385baa430f73f90e7a24690e8.png" />
</Frame>

***

## Usage

### Integration

To enable AI support in the CometChat UI Kit, you need to configure the UIKitSettings by passing a list of AI extensions.

<Tabs>
<Tab title="Dart">
```dart
UIKitSettings uiKitSettings = (UIKitSettingsBuilder()
  ..aiFeature =  [
    AISmartRepliesExtension(), // Smart Replies
    AIConversationStarterExtension(), // Conversation Starter
    AIAssistBotExtension(), // Assist Bot
    AIConversationSummaryExtension() // Conversation Summary
  ] // AI Features
).build();
```

</Tab>

</Tabs>

***

## Conversation Starters

When a user initiates a new chat, the UI kit displays a list of suggested opening lines that users can select, making it easier for them to start a conversation. These suggestions are powered by CometChat's AI, which predicts contextually relevant conversation starters.

For a comprehensive understanding and guide on implementing and using the Conversation Starters, refer to our specific guide on the [Conversation Starter](/fundamentals/ai-user-copilot/conversation-starter).

Once you have successfully activated the [Conversation Starter](/fundamentals/ai-user-copilot/conversation-starter) from your CometChat Dashboard, the feature will automatically be incorporated into the [MessageList](/ui-kit/flutter/v5/message-list) Widget of UI Kits.

<Frame>
  <img src="/images/66b628b9-conversation_starter-3e07b0394f72d62c55b12b25d1794add.png" />
</Frame>

## Smart Replies

Smart Replies are AI-generated responses to messages. They can predict what a user might want to say next by analyzing the context of the conversation. This allows for quicker and more convenient responses, especially on mobile devices.

For a comprehensive understanding and guide on implementing and using the Smart Replies, refer to our specific guide on the [Smart Replies](/fundamentals/ai-user-copilot/smart-replies).

Once you have successfully activated the [Smart Replies](/fundamentals/ai-user-copilot/smart-replies) from your CometChat Dashboard, the feature will automatically be incorporated into the Action sheet of [MessageComposer](/ui-kit/flutter/v5/message-composer) Widget of UI Kits.

<Frame>
  <img src="/images/40a16cf4-smart_reply-2e4a1f4ec165b8c700852e0395379806.png" />
</Frame>

## Conversation Summary

The Conversation Summary feature provides concise summaries of long conversations, allowing users to catch up quickly on missed chats. This feature uses natural language processing to determine the main points in a conversation.

For a comprehensive understanding and guide on implementing and using the Conversation Summary, refer to our specific guide on the [Conversation Summary](/fundamentals/ai-user-copilot/conversation-summary).

Once you have successfully activated the [Conversation Summary](/fundamentals/ai-user-copilot/conversation-summary) from your CometChat Dashboard, the feature will automatically be incorporated into the Action sheet of [MessageComposer](/ui-kit/flutter/v5/message-composer) Widget of UI Kits.

<Frame>
  <img src="/images/d9a79e08-conversation_summary-3263d5620276113b3301c76d9ea170d8.png" />
</Frame>

---

## Next Steps

<CardGroup cols={2}>
  <Card title="Message List" icon="list" href="/ui-kit/flutter/v5/message-list">
    Display and manage conversation messages with AI-powered starters
  </Card>
  <Card title="Message Composer" icon="pen" href="/ui-kit/flutter/v5/message-composer">
    Compose messages with smart replies and AI assistance
  </Card>
  <Card title="AI User Copilot" icon="robot" href="/fundamentals/ai-user-copilot/overview">
    Learn more about AI features and configuration
  </Card>
  <Card title="Extensions" icon="puzzle-piece" href="/ui-kit/flutter/v5/extensions">
    Explore other extensions to enhance your chat experience
  </Card>
</CardGroup>
